# esp32-Hardware-Monitor

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  app.manifest  app.rc  build.rs
.github/workflows/: release.yml
hardwareMonitor/: Config.h  DisplayDashboard.cpp  DisplayDashboard.h  DisplayMode.h  Metrics.cpp  Metrics.h  SerialProtocol.cpp  SerialProtocol.h  WebConfig.cpp  WebConfig.h  hardwareMonitor.ino
hardwareMonitor/data/: index.html
scripts/: build-firmware.ps1  build-monitor-setup.ps1  build-temperature-probe.ps1  flash-firmware.ps1  prepare-libre-hardware-monitor.ps1  upload-data.ps1
src/: agent.rs  config.rs  install.rs  logging.rs  main.rs  metrics.rs  paths.rs  pawnio.rs  serial_link.rs  temperature.rs  win_util.rs
temp-probe/: AssemblyInfo.cs  ElevatedTemperatureAgent.cs  RegisterElevatedTemperatureTask.ps1  TemperatureProbe.cs
